--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
     <meta charset="utf-8">
-    <meta name="description" content="">
+    <meta name="description" content="La chouette agence est une agence web située à Lyon. Nous aidons les entreprises à améliorer leur site web en partant de leur besoin !">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
 
     <link rel="shortcut icon" type="image/png" href="favicon.jpg">  
@@ -17,7 +17,7 @@
 	<script src="./js/jquery.touchSwipe.js" defer></script>
 	<script src="./js/gmaps.js"></script>
 
-    <title>.</title>
+    <title>La chouette agence de Lyon, nos compétences au service de vos attentes pour votre sibe web</title>
 
     
 <!-- Analytics -->
@@ -35,7 +35,7 @@
 
 		<nav class="navbar row">
 			<div class="navbar-header">
-				<a class="navbar-brand" href="index.html"><img src="img/la-chouette-agence.png" alt="paris web design logo agence web meilleure agence" height="40" /></a>
+				<a class="navbar-brand" href="index.html"><img src="img/la-chouette-agence.png" id="logo_header" alt="paris web design logo agence web meilleure agence"/></a>
 				<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
 					<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
 				</button>
@@ -46,7 +46,7 @@
 						<a href="index.html">Accueil</a>
 					</li>
 					<li>
-						<a href="formulaire_contact.html">formulaire_contact &gt;</a>
+						<a href="formulaire_contact.html">Formulaire pour nous contacter</a>
 					</li>
 				</ul>
 			</div>
