--- a/formulaire_contact.html
+++ b/formulaire_contact.html
@@ -80,25 +80,28 @@
 				<form id="form_1" novalidate success-msg="Your message has been sent." fail-msg="Sorry it seems that our mail server is not responding, Sorry for the inconvenience!">
 					<div class="form-group">
 						<label>
-							Nom
+							<strong>Votre nom ou nom de votre entreprise</strong>
 						</label>
-						<input id="name" class="form-control" required />
+						<input id="name" class="form-control" placeholder="Sophie Vasseur ou la chouette agence" required />
 					</div>
 					<div class="form-group">
 						<label>
-							Adresse email
+							<strong> Votre adresse email</strong>
 						</label>
-						<input id="email" class="form-control" type="email" required />
+						<input id="email" class="form-control" type="email" placeholder="contact@lachouetteagence.com" required />
+					</div>
+					<div class="form-group">
+						<label for="how_know"><strong>Comment nous avez-vous connu ?</strong></label></br>
+						<select name="how_know" id="how_know">
+							<option value="moteur_recherche">Moteur de recherche</option>
+							<option value="reseaux_sociaux">Réseaux sociaux</option>
+							<option value="conseille_personne_entreprise">Conseillé par une personne et/ou une entreprise</option>
+							<option value="autres">Autres</option>
+						</select>
 					</div>
 					<div class="form-group">
 						<label>
-							Comment nous avez-vous connu ?
-						</label>
-						<input class="form-control" type="email" required id="input_504" />
-					</div>
-					<div class="form-group">
-						<label>
-							Brief de votre projet (Ajoutez autant de détails que nécessaire)<br>
+							<br><strong>Brief de votre projet </strong> (Ici vous pouvez parler de votre entreprise, ce que vous souhaitez faire, ce qu'on peut vous apportez, etc.)<br>
 						</label><textarea id="message" class="form-control" rows="4" cols="50" required></textarea>
 					</div> 
 					<button class="bloc-button btn btn-lg btn-block cta-hero btn-atomic-tangerine" type="submit">
