--- a/formulaire_contact.html
+++ b/formulaire_contact.html
@@ -45,7 +45,7 @@
 						<a href="index.html">Accueil</a>
 					</li>
 					<li>
-						<a href="formulaire_contact.html">Formulaire pour nous contacter</a>
+						<a href="formulaire_contact.html">Contact</a>
 					</li>
 				</ul>
 			</div>
