modification image et css

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 		<link rel="shortcut icon" type="image/png" href="favicon.jpg" />
 		<link rel="stylesheet" type="text/css" href="./css/bootstrap.css" />
-		<link rel="stylesheet" type="text/css" href="style.css" />
+		<link rel="stylesheet" type="text/css" href="style-min.css" />
 		<link rel="stylesheet" type="text/css" href="./css/font-awesome.css" />
 		<link rel="stylesheet" type="text/css" href="./css/et-line.css" />
 
@@ -259,7 +259,7 @@
 								data-caption="Création d'un site internet pour un voyageur"
 								data-frame="snapshot-lb"
 								><img
-									src="img/3.bmp"
+									src="img/voyageur.jpg"
 									class="img-responsive portfolio-thumb"
 									alt="Image permettant d'accèder au site web du voyageur"
 							/></a>
@@ -279,7 +279,7 @@
 								data-caption="Conception d'un site pour une agence de mariage"
 								data-frame="snapshot-lb"
 								><img
-									src="img/4.bmp"
+									src="img/agence_mariage.jpg"
 									class="img-responsive portfolio-thumb"
 									alt="Image permettant d'accèder au site web de l'agence de mariage"
 							/></a>
