--- a/index.html
+++ b/index.html
@@ -14,14 +14,12 @@
 		<link rel="stylesheet" type="text/css" href="./css/font-awesome.css" />
 		<link rel="stylesheet" type="text/css" href="./css/et-line.css" />
 
-		<script src="./js/jquery-2.1.0.js"></script>
-		<script src="./js/bootstrap.js"></script>
-		<script src="./js/blocs.js"></script>
-		<script src="./js/jquery.touchSwipe.js" defer></script>
-		<script src="./js/gmaps.js"></script>
+		<script src="./js/jquery-2.1.0.js" defer></script>
+		<script src="./js/bootstrap.js" defer></script>
+		<script src="./js/blocs.js" defer></script>
 
 		<title>
-			La chouette agence de Lyon, nos compétences au service de vos attentes pour votre sibe
+			La chouette agence de Lyon, nos compétences au service de vos attentes pour votre site
 			web
 		</title>
 
